--- a/README
+++ b/README
@@ -4,3 +4,4 @@ Trabalho: Em Grupo
 Alunos: Squad 01 (Marcus Vinicius, Orlando, Thawã, Matxiani, Alberto, João, Domilto)  
 Monitora: Vania
 Tema: Tecnologia/Educação/Preservação Ambiental
+Projeto: Oráculo o Guardião.
